2008-09-07  Alper KANAT  <alperkanat@gmail.com>

	* templates/feeds/latest_description.html: allowed html tags in rss feed..
	* .htaccess: redirection from www.raptiye.org to raptiye.org done!
	* extra/tag_cloud.py, blog/feeds.py: forgot to add datetime object..
	* blog/views.py, blog/feeds.py, extra/tag_cloud.py: filter against the posts
	are better now.. entries are excluded if they're to be published in the
	future or not yet published..
	* media/css/style.css: little css tweak for list items at the homepage..
	* frontpage/templatetags/frontpage_filters.py,
	templates/frontpage/base.html: raptiye's version comes from settings.py
	now..
	* extra/mail.py, comments/views.py: notifications are not sent to the person
	who sends the comment..
	* extra/messages.py, users/views.py: some messages are moved to
	messages.py.. no need to send the form errors to the template despite
	they're already sent..
	* templates/blog/comments.html: manipulating the comments page's dom, the JS
	now cares about the line breaks..
	* templates/users/registration.html: just a little type correction..
	* templates/users/login.html: thanks to Ozan GÜVEN, error messages in login
	page are no longer in English..
	* polls/views.py, templates/blog/poll.html: changed the stupid
	implementation of using sessions for the poll.. using cookies instead..
	* blog/templatetags/blog_filters.py, templates/blog/pagination.html: search
	pagination works correctly now.. thanks to Ozan GÜVEN who made me realize
	this problem..

2008-09-06  Alper KANAT  <alperkanat@gmail.com>

	* blog/feeds.py, urls.py: raptiye can output a rss feed for any tag now..
	niceeee!.. :)
	* blog/models.py, extra/webcal.py, templates/users/profile.html,
	templates/blog/homepage.html, templates/frontpage/homepage.html: All
	datetime objects shows two digit months and days now..
	* extra/messages.py: corrected a typo..
	* templates/blog/feedburner.html: feedburner has the new feed now..