@@ -36,11 +36,11 @@
 	&raquo; tunix [et] raptiye.org<br>
 	&raquo; GPG Genel Anahtarım<br>
 	&raquo; <strong>Jabber:</strong> tunix@jabber.org<br>
-	<br>
-	<center>
-		buraya flickr vb. bir galeri koyacağım
-	</center>
-	<br>
+	<!-- <br>
+		<center>
+			buraya flickr vb. bir galeri koyacağım
+		</center>
+		<br> -->
 	&raquo; <strong>İsim:</strong> Alper KANAT<br>
 	&raquo; <strong>Yaş:</strong> {% calculate_age %}<br>
 	&raquo; <strong>Yaşadığı Yer:</strong> İstanbul<br>
